# pokedex

./: DataGrab.hs  DataGrabLocal.hs  LICENSE  PokeCache.hs  PokeParser.hs  Pokedex.hs  PokedexGeneration.hs  Pokemon.hs  README.md  TypeComparison.hs  WikimediaParser.hs  pidgey.xml  pidgey2.xml  pokeCache.hs  pokedex.cabal
