name:                pokedex

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.1

-- A short (one-line) description of the package.
synopsis:            An interface to pokemon.wikia.com for easy reasoning on your pokemon and quick stats lookup

-- A longer description of the package.
-- description:         

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Bart Spiers

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:          bart.spiers@vub.ac.be

-- A copyright notice.
copyright:           Copyright (c) 2013, Bart Spiers

category:            Data

build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.8


library
  -- Modules exported by the library.
  exposed-modules:     PokeParser
  
  -- Modules included in this library but not exported.
  -- other-modules:       
  
  -- Other library packages from which modules are imported.
  build-depends:       base ==4.5.*,
                       regex-tdfa
  